--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@
 }
 
 body{
-    font-size: 16px;
+    font-size: 1rem;
     font-family: sans-serif;
-    height: 100vh;
-    padding: 1rem;
+    /* min-width: 100vh; */
+    padding: 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -17,7 +17,9 @@ body{
 }
 
 main{
-    width: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -222,7 +224,7 @@ main{
 .text-field input:focus{
     border:Ipx solid #a849f0;
 }
-    
+
 .text-field-label{
     display: flex;    
     /* justify-content: center;     */
@@ -254,5 +256,6 @@ main{
     color:#a849f0;
     justify-content: right;
 }
+
 
 
